<resources>
    <string name="app_name" translatable="false">My Infos</string>

    <string name="menu_version">menu_version</string>

    <string name="activity_no_perms_message">activity_no_perms_message</string>

    <string name="ui_title_phone">ui_title_phone</string>
    <string name="ui_image_phone">ui_image_phone</string>
    <string name="ui_label_imei1">ui_label_imei1</string>
    <string name="ui_label_imei2">ui_label_imei2</string>
    <string name="ui_label_swver">ui_label_swver</string>
    <string name="ui_label_device_id">ui_label_device_id</string>

    <string name="ui_title_sim">ui_title_sim</string>
    <string name="ui_image_sim">ui_image_sim</string>
    <string name="ui_label_sim1_iccid">ui_label_sim1_iccid</string>
    <string name="ui_label_sim1_country">ui_label_sim1_country</string>
    <string name="ui_label_sim1_operator">ui_label_sim1_operator</string>
    <string name="ui_label_number1">ui_label_number1</string>
    <string name="ui_label_carrier1">ui_label_carrier1</string>
    <string name="ui_label_subscriber1">ui_label_subscriber1</string>

    <string name="ui_label_sim2_iccid">ui_label_sim2_iccid</string>
    <string name="ui_label_sim2_country">ui_label_sim2_country</string>
    <string name="ui_label_sim2_operator">ui_label_sim2_operator</string>
    <string name="ui_label_number2">ui_label_number2</string>
    <string name="ui_label_carrier2">ui_label_carrier2</string>
    <string name="ui_label_subscriber2">ui_label_subscriber2</string>

    <string name="ui_title_network">ui_title_network</string>
    <string name="ui_image_network">ui_image_network</string>
    <string name="ui_label_network_type">ui_label_network_type</string>
    <string name="ui_label_network_count">ui_label_network_count</string>

    <string name="ui_value_notdefined">ui_value_notdefined</string>

    <string name="ui_button_close">ui_button_close</string>
</resources>
