<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:id="@+id/infos_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/infos_sim1_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sim1_iccid_label"
                style="@style/ui_infos_label"
                android:labelFor="@+id/sim1_iccid_value"
                android:text="@string/ui_label_sim1_iccid" />

            <EditText
                android:id="@+id/sim1_iccid_value"
                style="@style/ui_infos_value" />

            <TextView
                android:id="@+id/sim1_country_label"
                style="@style/ui_infos_label"
                android:labelFor="@+id/sim1_country_value"
                android:text="@string/ui_label_sim1_country" />

            <EditText
                android:id="@+id/sim1_country_value"
                style="@style/ui_infos_value" />

            <TextView
                android:id="@+id/sim1_operator_label"
                style="@style/ui_infos_label"
                android:labelFor="@+id/sim1_operator_value"
                android:text="@string/ui_label_sim1_operator" />

            <EditText
                android:id="@+id/sim1_operator_value"
                style="@style/ui_infos_value" />

            <TextView
                android:id="@+id/number1_label"
                style="@style/ui_infos_label"
                android:labelFor="@+id/number1_value"
                android:text="@string/ui_label_number1" />

            <EditText
                android:id="@+id/number1_value"
                style="@style/ui_infos_value"
                android:inputType="number"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/carrier1_label"
                style="@style/ui_infos_label"
                android:labelFor="@+id/carrier1_value"
                android:text="@string/ui_label_carrier1" />

            <EditText
                android:id="@+id/carrier1_value"
                style="@style/ui_infos_value" />

            <TextView
                android:id="@+id/subscriber1_label"
                style="@style/ui_infos_label"
                android:labelFor="@+id/subscriber1_value"
                android:text="@string/ui_label_subscriber1" />

            <EditText
                android:id="@+id/subscriber1_value"
                style="@style/ui_infos_value" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>