<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:id="@+id/infos_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/infos_sim2_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sim2_iccid_label"
                style="@style/ui_infos_label"
                android:labelFor="@+id/sim2_iccid_value"
                android:text="@string/ui_label_sim2_iccid" />

            <EditText
                android:id="@+id/sim2_iccid_value"
                style="@style/ui_infos_value" />

            <TextView
                android:id="@+id/sim2_country_label"
                style="@style/ui_infos_label"
                android:labelFor="@+id/sim2_country_value"
                android:text="@string/ui_label_sim2_country" />

            <EditText
                android:id="@+id/sim2_country_value"
                style="@style/ui_infos_value" />

            <TextView
                android:id="@+id/sim2_operator_label"
                style="@style/ui_infos_label"
                android:labelFor="@+id/sim2_operator_value"
                android:text="@string/ui_label_sim2_operator" />

            <EditText
                android:id="@+id/sim2_operator_value"
                style="@style/ui_infos_value" />

            <TextView
                android:id="@+id/number2_label"
                style="@style/ui_infos_label"
                android:labelFor="@+id/number2_value"
                android:text="@string/ui_label_number2" />

            <EditText
                android:id="@+id/number2_value"
                style="@style/ui_infos_value"
                android:inputType="number"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/carrier2_label"
                style="@style/ui_infos_label"
                android:labelFor="@+id/carrier2_value"
                android:text="@string/ui_label_carrier2" />

            <EditText
                android:id="@+id/carrier2_value"
                style="@style/ui_infos_value" />

            <TextView
                android:id="@+id/subscriber2_label"
                style="@style/ui_infos_label"
                android:labelFor="@+id/subscriber2_value"
                android:text="@string/ui_label_subscriber2" />

            <EditText
                android:id="@+id/subscriber2_value"
                style="@style/ui_infos_value" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>