<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/infos_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/infos_phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/imei1_label"
            style="@style/ui_infos_label"
            android:labelFor="@+id/imei1_value"
            android:text="@string/ui_label_imei1" />

        <EditText
            android:id="@+id/imei1_value"
            style="@style/ui_infos_value"
            tools:ignore="Autofill" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/imei2_label"
            style="@style/ui_infos_label"
            android:labelFor="@+id/imei2_value"
            android:text="@string/ui_label_imei2" />

        <EditText
            android:id="@+id/imei2_value"
            style="@style/ui_infos_value"
            tools:ignore="Autofill" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/swver_label"
            style="@style/ui_infos_label"
            android:labelFor="@+id/swver_value"
            android:text="@string/ui_label_swver" />

        <EditText
            android:id="@+id/swver_value"
            style="@style/ui_infos_value"
            tools:ignore="Autofill" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/device_id_label"
            style="@style/ui_infos_label"
            android:labelFor="@+id/device_id_value"
            android:text="@string/ui_label_device_id" />

        <EditText
            android:id="@+id/device_id_value"
            style="@style/ui_infos_value"
            tools:ignore="Autofill" />

    </LinearLayout>

</ScrollView>
